testsuite/tests/v1/indexing/non_indexable/test.out
Error: Missing required trait
   ╭─[ <working-dir>/script.lkql:2:7 ]
   │
 2 │ print(lst[1])
   │       ─┬─  
   │        ╰─── Trait "Indexable" is required, the type "Str" isn't implementing it
───╯
